fix: keep connector test Java 8 compatible
Replace Stream.toList() in the new test so the legacy Java 8 CI build can compile the branch successfully.